devops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kierantest-service
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    k8s-app: kierantest
